# roxy

./: .gitignore  flutter_rust_bridge.yaml  pubspec.yaml
backend/: Cargo.toml  gen_keys.cmd
backend/src/: lib.rs
backend/src/api/: init.rs  mod.rs
backend/src/api/http/: mod.rs  request.rs  server.rs
backend/src/api/utils/: error.rs  logger.rs
backend/src/core/certs/: cert.pem  private.key  roxy.cer  roxy.key
backend/src/core/http/: client.rs  mod.rs  rewind.rs  server.rs  tls.rs
integration_test/: simple_test.dart
lib/: main.dart
lib/backend/: .gitignore
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/http/: proxy.dart  request.dart
lib/utils/: logging.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: error.rs  mod.rs
rust/src/api/http/: proxy.rs  request.rs
rust/src/api/utils/: error.rs  logger.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_roxy.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_roxy.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
