[package]
name = "rust_lib_roxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
hermit-abi = "0.4.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-rustls = { version = "0.27.3", features = ["http2"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.22"
parking_lot = "0.12.3"
rustls = "0.23.18"
rustls-pemfile = "2.2.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "net"] }
tokio-rustls = "0.26.0"
