[package]
name = "rust_lib_roxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
hermit-abi = "0.4.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["net"]}
